--- a/trunk/lotteria/Classes/ChangeSideView.xib
+++ b/trunk/lotteria/Classes/ChangeSideView.xib
@@ -45,7 +45,7 @@
 					<object class="IBUITableView" id="1033563081">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 356}</string>
+						<string key="NSFrameSize">{320, 324}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -63,7 +63,7 @@
 					<object class="IBUIImageView" id="585798079">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{0, 356}, {320, 56}}</string>
+						<string key="NSFrame">{{0, 324}, {320, 56}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -78,7 +78,7 @@
 					<object class="IBUIButton" id="851778380">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{19, 363}, {281, 43}}</string>
+						<string key="NSFrame">{{19, 331}, {281, 43}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -107,7 +107,7 @@
 						</object>
 					</object>
 				</object>
-				<string key="NSFrameSize">{320, 412}</string>
+				<string key="NSFrameSize">{320, 380}</string>
 				<reference key="NSSuperview"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -178,9 +178,9 @@
 						<reference key="object" ref="883825266"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="1033563081"/>
 							<reference ref="585798079"/>
 							<reference ref="851778380"/>
-							<reference ref="1033563081"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -219,18 +219,18 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>ChangeSideViewController</string>
 					<string>UIResponder</string>
-					<string>{{460, 237}, {320, 412}}</string>
+					<string>{{460, 269}, {320, 380}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAw7AAAA</bytes>
 					</object>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABAQAAAw8UAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAw80AAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABBmAAAw8sAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABBmAAAw8oAAA</bytes>
 					</object>
 				</object>
 			</object>
@@ -257,7 +257,7 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">ChangeSideViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">UIViewControllerTemplate</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">listTable</string>
 						<string key="NS.object.0">UITableView</string>
@@ -272,6 +272,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/ChangeSideViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIViewControllerTemplate</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">TemplateCell/UIViewControllerTemplate.h</string>
 					</object>
 				</object>
 			</object>
@@ -345,6 +353,20 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">Foundation.framework/Headers/NSURLConnection.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CAAnimation.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CALayer.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
