--- a/trunk/lotteria/Classes/MapBody/MapBodyView.xib
+++ b/trunk/lotteria/Classes/MapBody/MapBodyView.xib
@@ -69,7 +69,7 @@
 					<object class="IBUIButton" id="416261271">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{258, 59}, {50, 43}}</string>
+						<string key="NSFrame">{{250, 60}, {57, 50}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -100,7 +100,7 @@
 					<object class="IBUIButton" id="573474291">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{258, 141}, {50, 43}}</string>
+						<string key="NSFrame">{{250, 160}, {57, 50}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -121,7 +121,7 @@
 					<object class="IBUIButton" id="779034652">
 						<reference key="NSNextResponder" ref="883825266"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{258, 102}, {50, 39}}</string>
+						<string key="NSFrame">{{250, 110}, {57, 50}}</string>
 						<reference key="NSSuperview" ref="883825266"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -401,12 +401,12 @@
 							<reference ref="680748797"/>
 							<reference ref="191982087"/>
 							<reference ref="416261271"/>
-							<reference ref="573474291"/>
-							<reference ref="779034652"/>
 							<reference ref="400197767"/>
 							<reference ref="266295194"/>
 							<reference ref="706926197"/>
 							<reference ref="847652823"/>
+							<reference ref="573474291"/>
+							<reference ref="779034652"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -485,7 +485,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>MapBodyViewController</string>
 					<string>UIResponder</string>
-					<string>{{681, 180}, {320, 412}}</string>
+					<string>{{616, 180}, {320, 412}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -497,11 +497,11 @@
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABDeQAAwzEAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABDegAAwxsAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABDeQAAw1wAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABDgQAAwzYAAA</bytes>
 					</object>
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAAC/gAAAwswAAA</bytes>
@@ -714,6 +714,20 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">Foundation.framework/Headers/NSURLConnection.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CAAnimation.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CALayer.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
